a2a4j-core/src/main/java/io/github/PheonixHkbxoic/a2a4j/core/spec/error/A2AClientError.java
package io.github.PheonixHkbxoic.a2a4j.core.spec.error;

/**
 * @author PheonixHkbxoic
 */
public class A2AClientError extends RuntimeException {
    public A2AClientError(String message) {
        super(message);
    }
}
